--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-
-
-spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.23.111:3306/boardsystem?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/boardsystem?autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=kopoctc
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
